--- a/Credenciamento.Web/wwwroot/css/site.css
+++ b/Credenciamento.Web/wwwroot/css/site.css
@@ -107,3 +107,17 @@ body {
     background-position: right calc(0.375em + 0.1875rem) center;
     background-size: calc(0.75em + 0.375rem) calc(0.75em + 0.375rem);
 }
+
+.bg-purple {
+    background-color:rebeccapurple;
+    color:white;
+}
+
+.img-payment-method {
+    width: 200px;
+    height: auto;
+}
+
+.card-body .height-250 {
+    min-height: 250px;
+}
