--- a/Credenciamento.Web/Views/Home/Index.cshtml
+++ b/Credenciamento.Web/Views/Home/Index.cshtml
@@ -17,12 +17,12 @@
             </div>
             <div class="card-body">
                 <div class="row">
-                    <div class="col-md-8">
-                
+                    <div class="col-md-10">
                         <p class="card-text">@item.Local - @item.Begin.ToString("dd/MM") a @item.End.ToString("dd/MM")</p>
+                        <p class="card-text" style="text-align:justify">@item.Description</p>
                         <p class="card-text">@item.Price.ToString("c2")</p>
                     </div>
-                    <div class="col-md-4 text-end">
+                    <div class="col-md-2 text-end">
                         <button type="button" class="btn btn-primary btn-buy" data-id="@item.EventId">Comprar ingresso</button>
                     </div>
                 </div>
