--- a/Credenciamento.Web/Views/Shared/_Layout.cshtml
+++ b/Credenciamento.Web/Views/Shared/_Layout.cshtml
@@ -5,14 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - Credenciamento.Web</title>
 
-    <link type="text/css" href="~/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
-    <link type="text/css" href="~/lib/bootstrap-icons/font/bootstrap-icons.min.css" rel="stylesheet" />
-    <link type="text/css" rel="stylesheet" href="~/css/site.css" />
+    <link type="text/css" href="~/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" asp-append-version="true" />
+    <link type="text/css" href="~/lib/bootstrap-icons/font/bootstrap-icons.min.css" rel="stylesheet" asp-append-version="true" />
+    <link type="text/css" rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
 
-    <script type="text/javascript" src="~/lib/jquery/jquery.min.js"></script>
-    <script type="text/javascript" src="~/lib/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script type="text/javascript" src="~/lib/jquery.mask/jquery.mask.min.js"></script>
-    <script type="text/javascript" src="~/js/site.js"></script>
+    <script type="text/javascript" src="~/lib/jquery/jquery.min.js" asp-append-version="true"></script>
+    <script type="text/javascript" src="~/lib/bootstrap/js/bootstrap.bundle.min.js" asp-append-version="true"></script>
+    <script type="text/javascript" src="~/lib/jquery.mask/jquery.mask.min.js" asp-append-version="true"></script>
+    <script type="text/javascript" src="~/js/cookies.js" asp-append-version="true"></script>
+    <script type="text/javascript" src="~/js/site.js" asp-append-version="true"></script>
 </head>
 <body>
     <header>
